--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: fgm
+name: FGM
 description: The Force of Grace Ministry
 publish_to: none
 version: 1.0.0+1
@@ -15,10 +15,28 @@ dependencies:
   smooth_page_indicator: ^1.0.1
   flutter_launcher_icons: ^0.12.0
   flutter_native_splash: ^2.2.18
+  hive_flutter: ^1.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+flutter_icons:
+  android: true
+  ios: true
+  image_path: images/app-logo.png
+  min_sdk_android: 21
+  web:
+    generate: true
+    image_path: images/app-logo.png
+    background_color: '#FFFFFF'
+    theme_color: '#007AFF'
+  windows:
+    generate: true
+    image_path: images/app-logo.png
+    icon_size: 48
+  macos:
+    generate: true
+    image_path: images/app-logo.png
 flutter:
   uses-material-design: true
   assets:
