--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   get: ^4.6.5
   http_interceptor: ^1.0.2
   shimmer: ^2.0.0
+  flutter_file_downloader: ^1.1.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
