--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,11 @@ dependencies:
   http_interceptor: ^1.0.2
   shimmer: ^2.0.0
   flutter_file_downloader: ^1.1.2
+  page_transition: ^2.0.9
+  otp_text_field: ^1.1.3
+  flutter_paystack: ^1.0.7
+  flutter_dotenv: ^5.0.2
+  lottie: ^2.3.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -57,3 +62,6 @@ flutter:
   assets:
   - images/
   - audio/
+  - .env
+  - .env.development
+  - .env.production
