--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   flutter_paystack: ^1.0.7
   flutter_dotenv: ^5.0.2
   lottie: ^2.3.2
+  url_launcher: ^6.1.10
+  connectivity_plus: ^3.0.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
